Do not disable touch event logging unnecessarily

Touch event logging is currently disabled whenever the virtual keyboard
is initialized, but it should only be disabled when the keyboard is
shown. This CL makes that change.

Bug: 777616
Change-Id: Ie479e0b7925119ca83cb68ecc3c91cd46672a58b
Reviewed-on: https://chromium-review.googlesource.com/734217
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Commit-Queue: Sean O'Brien <seobrien@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511250}
Former-commit-id: a5a6e915bde07fb8f2c45b8e11db26e88e232e1b